# CropMask_RCNN

./: .gitignore  Makefile  README.md  requirements.txt  setup.py
daemon/: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  daemon.wsgi  debug.sh  quick_test.sh  requirements_dev.txt  setup.cfg  setup.py  wsgi.ini
daemon/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
daemon/daemon/: __init__.py  query.py  routes.py
daemon/daemon/blueprint/: __init__.py  exceptions.py
daemon/docs/: Makefile  autodoc.rst  conf.py  index.rst  make.bat
daemon/tests/: __init__.py  test_daemon.py
docs/: Makefile  conf.py  index.rst  make.bat
mrcnn/: model.py  visualize.py
notebooks/: Adjustable_Grid.ipynb  Center-Pivot-PreProcessing-and-Vis.ipynb  Grid_Rasterize_WV2_With_NegBuffer.ipynb  Heatmap_Morphing.ipynb  Train_WV2_MRCNN.ipynb  WV2_MRCNN.ipynb  WV2_MRCNN_PRE.ipynb  WV2_MRCNN_PRE.pynb  worldview_to_tensors.ipynb
notebooks/crops/: crop_mask.py  inspect_crop_data.ipynb  wv2_config.py  wv2_dataset.py  wv2_preprocess.py
reports/: litreview.odt
samples/nucleus/: inspect_nucleus_data.ipynb  nucleus.py
scripts/: raster_boundaries.r
src/models/: train_model.py
