# Coverage config
[coverage:run]
source = daemon

# autopep8 config
[pep8]
in-place = True
recursive = True
max-line-length = 100
verbose = 1
exclude = venv, build, dist, .git, __pycache__, docs

# flake8 config
[flake8]
max-line-length = 100
ignore = E121,E123,E126,E226,E24,E402,E704,W503,W504
exclude = venv, build, dist, .git, __pycache__, docs

# bumpversion config
[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:daemon/blueprint/__init__.py]

[bumpversion:file:README.md]

[bumpversion:file:docs/conf.py]

# bdist_wheel config
# Uncomment for a universal wheel
#[bdist_wheel]
#universal = 1

[metadata]
license_file = LICENSE
